# llm-finetuning-domain-generator

./: README.md  config.yaml  pyproject.toml  requirements.txt
data/processed/: train.jsonl  val.jsonl
data/raw/: synth.jsonl
notebooks/: llm-finetuning-for-domain-name-generation.ipynb
src/: analyze.py  cfg.py  compare_runs.py  data_format.py  data_prep.py  data_synth.py  generator.py  judge_openai.py  model_hf.py  model_unsloth.py  pipeline_baseline.py  pipeline_finetune.py  run_manager.py  train_hf_qlora.py  train_unsloth.py  utils_json.py
src/steps/: analysis_step.py  compare_step.py  data_step.py  model_step.py  scoring_step.py  train_step.py
src/templates/: constants.py  prompts.py
